tests/ui/imports/issue-55457.stderr
error[E0432]: unresolved import `NonExistent`
  --> $DIR/issue-55457.rs:1:5
   |
LL | use NonExistent;
   |     ^^^^^^^^^^^
   |     |
   |     no `NonExistent` in the root
   |     help: a similar name exists in the module: `non_existent`

error[E0432]: unresolved import `non_existent`
  --> $DIR/issue-55457.rs:2:5
   |
LL | use non_existent::non_existent;
   |     ^^^^^^^^^^^^ you might be missing crate `non_existent`
   |
   = help: consider adding `extern crate non_existent` to use the `non_existent` crate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0432`.
